@@ -1,5 +1,7 @@
-2010-03-16 MA Yue <velly.empire@gmail.com>
+2010-03-15 MA Yue <velly.empire@gmail.com>
     * Add some Nautilus Script
+    * Add title bar layout setting
+
 2010-03-15 MA Yue <velly.empire@gmail.com>
 
     * Add functionality for changing /apps/gnome-power-manager/lock/hibernate
